--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,12 +1,11 @@
 name: Build
 
-# on:
-#   push:
-#     branches:
-#       - main
-#   pull_request:
-#   schedule:
-#     - cron: '35 5 * * *'
+on:
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: "35 5 * * *"
 
 jobs:
   check_release:
